--- a/src/styles/Screen.css
+++ b/src/styles/Screen.css
@@ -12,6 +12,6 @@
   background-color: #386200;
   color: black;
   padding: 11px 30px 11px 11px;
-  margin: 1px solid #888;
+  margin-bottom: 1.5rem;
   box-shadow: -1px 10px 1px 1px #181818;
 }
